--- a/app/views/admin/institutions/show.html.erb
+++ b/app/views/admin/institutions/show.html.erb
@@ -1,15 +1,9 @@
 <div class="container">
   <div>
-  <%= flash[:notice] %>
+    <%= flash[:notice] %>
   </div>
   <div class="row pt-4">
-    <div class="col-md-1 offset-md-8">
-     
-    </div>
-    <div class="col-md-1">
-      
-    </div>
-    <div class="col-md-1">
+    <div class="col-md-1 offset-md-10">
       <%= link_to edit_admin_institution_path(@institution), class: "btn btn-outline-secondary btn-block" do %> <i class="fas fa-cog"></i>
         <% end %>
     </div>
@@ -43,20 +37,16 @@
           <th colspan='2'>
             <div class="offset-md-3 pt-1">
               <%= @institution.reviews.count %>件のレビュー
-                <%= @institution.bookmarks.count %>件のお気に入り 
-            </div>
+                <%= @institution.bookmarks.count %>件のお気に入り </div>
           </th>
         </tr>
         <tr>
-           <th colspan='3'>
+          <th colspan='3'>
             <div class="row">
-               <div class="col-md-8">
-             <h2>
-             レビュー一覧
-              </h2>
+              <div class="col-md-8">
+                <h2> レビュー一覧 </h2>
               </div>
-           
-              </div>
+            </div>
           </th>
         </tr>
         <% @institution.reviews.each do |review| %>
@@ -89,88 +79,85 @@
                 }
                  raty(elm, opt);
               </script>
-              <%= review.star %></br>
-              
-              <%= review.likes.count %>いいね
-              <%= review.comments.count %>コメント
-            </th>
+              <%= review.star %>
+                </br>
+                <%= review.likes.count %>いいね
+                  <%= review.comments.count %>コメント </th>
             <% end %>
               <table>
-          <tr>
-            <td>
-              
-                <div class="container py-5">
-                    <h4><span class="bg-light text-secondary px-3">施設写真</span></h4>
-                </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="row">
-                <% if @institution.images.attached? %>
-                  <% @institution.images.each do |image| %>
-                    <div class="col-md-4">
-                    <%= image_tag image,width:"100%" %>
+                <tr>
+                  <td>
+                    <div class="container py-5">
+                      <h4><span class="bg-light text-secondary px-3">施設写真</span></h4>
                     </div>
-                  <% end %>
-                <% else %>
-                  <div class="col-md-4">
-                    <%= image_tag 'no_image', size: "200x200" %>
-                  </div>
-                <% end %>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="row">
+                      <% if @institution.images.attached? %>
+                        <% @institution.images.each do |image| %>
+                          <div class="col-md-4">
+                            <%= image_tag image,width:"100%" %>
+                          </div>
+                          <% end %>
+                            <% else %>
+                              <div class="col-md-4">
+                                <%= image_tag 'no_image', size: "200x200" %>
+                              </div>
+                              <% end %>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+              <div class="container py-5">
+                <h4><span class="bg-light text-secondary px-3">施設基本情報</span></h4>
               </div>
-            </td>
-          </tr>
-        </table>
-      <div class="container py-5">
-        <h4><span class="bg-light text-secondary px-3">施設基本情報</span></h4>
-      </div>
-      <table class="table table-bordered col-15">
-        <tbody>
-          <tr>
-            <td class="bg-light">施設名</td>
-            <td>
-              <%= @institution.name %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">住所</td>
-            <td>
-              <%= @institution.address %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">営業時間</td>
-            <td>
-              <%= @institution.start_time.strftime( "%H:%M" ) %>〜
-                <%= @institution.finish_time.strftime( "%H:%M" ) %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">基本料金</td>
-            <td>
-              <%= @institution.price %>円</td>
-          </tr>
-          <tr>
-            <td class="bg-light">ホームページ</td>
-            <td>
-              <%= @institution.link %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">電話番号</td>
-            <td>
-              <%= @institution.telephone_number %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">基本情報</td>
-            <td>
-              <%= @institution.introduction %>
-            </td>
-          </tr>
-      </table>
-      </br>
+              <table class="table table-bordered col-15">
+                <tbody>
+                  <tr>
+                    <td class="bg-light">施設名</td>
+                    <td>
+                      <%= @institution.name %>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="bg-light">住所</td>
+                    <td>
+                      <%= @institution.address %>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="bg-light">営業時間</td>
+                    <td>
+                      <%= @institution.start_time.strftime( "%H:%M" ) %>〜
+                        <%= @institution.finish_time.strftime( "%H:%M" ) %>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="bg-light">基本料金</td>
+                    <td>
+                      <%= @institution.price %>円</td>
+                  </tr>
+                  <tr>
+                    <td class="bg-light">ホームページ</td>
+                    <td>
+                      <%= @institution.link %>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="bg-light">電話番号</td>
+                    <td>
+                      <%= @institution.telephone_number %>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="bg-light">基本情報</td>
+                    <td>
+                      <%= @institution.introduction %>
+                    </td>
+                  </tr>
+              </table>
     </div>
   </div>
 </div>
