--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,17 +1,12 @@
 <div class="container">
-   <div class="row pt-5">
+  <div class="row pt-5">
     <div class="mx-auto">
-<h1>さうなびとは?</h1>
-</div>
-</div>
-<div class="row pt-5">
-    <div class="mx-auto">
-        <h4 class="pt-2">
-        さうなびとは、サウナ好きが、サウナ好きのためにサウナの情報を共有するサウナレビューサイトです。
-        まだ知られていない施設、登録されていない施設などを登録し、サウナ好きが、「このようなサウナだっ
-        た！」とレビューを投稿し、皆様のサウナライフを豊かにするようなサイトを目指しています。
-        
-        </h4>
+      <h1>さうなびとは?</h1>
     </div>
-</div>
+  </div>
+  <div class="row pt-5">
+    <div class="mx-auto">
+      <h4 class="pt-2"> さうなびとは、サウナ好きが、サウナ好きのためにサウナの情報を共有するサウナレビューサイトです。 まだ知られていない施設、登録されていない施設などを登録し、サウナ好きが、「このようなサウナだっ た！」とレビューを投稿し、皆様のサウナライフを豊かにするようなサイトを目指しています。 </h4>
+    </div>
+  </div>
 </div>
