--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,9 @@
+  <div class="jumbotron jumbotron-fluid bg_header">
+    <div class="container">
+      <h1 class="display-4">saunavi</h1>
+      <p class="lead">サウナ好きのサウナ好きのためのサイト</p>
+    </div>
+  </div>
   <div>
   <%= flash[:notice] %>
   <%= flash[:alert] %>
