--- a/app/views/admin/reviews/index.html.erb
+++ b/app/views/admin/reviews/index.html.erb
@@ -1,36 +1,33 @@
 <div class="container">
   <div>
-  <%= flash[:notice] %>
+    <%= flash[:notice] %>
   </div>
-  
   <div class="row pt-4">
-      <h3>レビュー一覧</h3>
-      <div class="col-md-11">
-          <table class="table">
-              <thead class=" thead-light ">
-                <th>投稿者名</th>
-                <th>レビュー</th>
-                <th></th>
-            </thead>
-<% @reviews.each do |review| %>
-<tbody>
-              <td>
-
-<%= link_to admin_user_path(review.user.id) do %>
-<%= review.user.nickname %>
-<% end %>
-</td>
-<td><%= link_to admin_review_path(review.id) do %>
-<%= review.title %>
-<% end %>
-</td>
-<td>
-    <%= review.comments.count %>コメント
-</td>
-
-<% end %>
- </tbody>          
-        </table>
-      </div>
+    <h3>レビュー一覧</h3>
+    <div class="col-md-11">
+      <table class="table">
+        <thead class=" thead-light ">
+          <th>投稿者名</th>
+          <th>レビュー</th>
+          <th></th>
+        </thead>
+        <% @reviews.each do |review| %>
+          <tbody>
+            <td>
+              <%= link_to admin_user_path(review.user.id) do %>
+                <%= review.user.nickname %>
+                  <% end %>
+            </td>
+            <td>
+              <%= link_to admin_review_path(review.id) do %>
+                <%= review.title %>
+                  <% end %>
+            </td>
+            <td>
+              <%= review.comments.count %>コメント </td>
+            <% end %>
+          </tbody>
+      </table>
+    </div>
   </div>
 </div>
