--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,97 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Saunavi</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
+<head>
+  <title>Saunavi</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-  
-  <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-     <div class="container">
-       <a class="navbar-brand" href="/">
-        <span>さうなび</span></a>  
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
+  <div class="footerFixed">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark" style="background:#2F4F4F;">
+        <div class="container"> <a class="navbar-brand" href="/">
+        <span>さうなび</span></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-             
-    <% if user_signed_in? %>         
-              <li>
-                <%= link_to new_institution_path, class: "nav-link text-light"  do %><i class="fas fa-plus"></i>施設登録
-                  <% end %>
-              </li>
-              
-              <li>
-                <%= link_to institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %><i class="fas fa-sign-out-alt"></i>ログアウト
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to user_path(current_user.id), class: "nav-link text-light"  do %> <%= image_tag current_user.get_profile_image(30,30), class: "rounded-circle" %>
-                  <% end %>
-              </li>
-  <% elsif admin_signed_in? %>
-               <li>
-                <%= link_to admin_institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to admin_users_path, class: "nav-link text-light"  do %><i class="fas fa-users"></i>ユーザー一覧
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to admin_reviews_path, class: "nav-link text-light"  do %><i class="fas fa-comments"></i>レビュー一覧
-                  <% end %>
-              </li>
-               <li>
-                <%= link_to destroy_admin_session_path, class: "nav-link text-light", method: :delete do %><i class="fas fa-sign-out-alt"></i>管理者ログアウト
-                  <% end %>
-              </li>
-    
-  <% else %>
-              <li>
-                <%= link_to institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to about_path, class: "nav-link text-light"  do %> <i class="fas fa-link"></i>さうなびとは
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to new_user_registration_path, class: "nav-link text-light"  do %><i class="fas fa-user-plus"></i>新規登録
-                  <% end %>
-              </li>
-              <li>
-                <%= link_to new_user_session_path, class: "nav-link text-light" do %><i class="fas fa-sign-in-alt"></i>ログイン
-                  <% end %>
-              </li>
-             <% end %>
-             
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to new_institution_path, class: "nav-link text-light"  do %><i class="fas fa-plus"></i>施設登録
+                    <% end %>
+                </li>
+                <li>
+                  <%= link_to institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
+                    <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %><i class="fas fa-sign-out-alt"></i>ログアウト
+                    <% end %>
+                </li>
+                <li>
+                  <%= link_to user_path(current_user.id), class: "nav-link text-light"  do %>
+                    <%= image_tag current_user.get_profile_image(30,30), class: "rounded-circle" %>
+                      <% end %>
+                </li>
+                <% elsif admin_signed_in? %>
+                  <li>
+                    <%= link_to admin_institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
+                      <% end %>
+                  </li>
+                  <li>
+                    <%= link_to admin_users_path, class: "nav-link text-light"  do %><i class="fas fa-users"></i>ユーザー一覧
+                      <% end %>
+                  </li>
+                  <li>
+                    <%= link_to admin_reviews_path, class: "nav-link text-light"  do %><i class="fas fa-comments"></i>レビュー一覧
+                      <% end %>
+                  </li>
+                  <li>
+                    <%= link_to destroy_admin_session_path, class: "nav-link text-light", method: :delete do %><i class="fas fa-sign-out-alt"></i>管理者ログアウト
+                      <% end %>
+                  </li>
+                  <% else %>
+                    <li>
+                      <%= link_to institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
+                        <% end %>
+                    </li>
+                    <li>
+                      <%= link_to about_path, class: "nav-link text-light"  do %> <i class="fas fa-link"></i>さうなびとは
+                        <% end %>
+                    </li>
+                    <li>
+                      <%= link_to new_user_registration_path, class: "nav-link text-light"  do %><i class="fas fa-user-plus"></i>新規登録
+                        <% end %>
+                    </li>
+                    <li>
+                      <%= link_to new_user_session_path, class: "nav-link text-light" do %><i class="fas fa-sign-in-alt"></i>ログイン
+                        <% end %>
+                    </li>
+                    <% end %>
             </ul>
           </div>
-      </div>
-  </nav>
-  </header>
-  <main>
+        </div>
+      </nav>
+    </header>
+    <main>
       <%= yield %>
-      </main>  
-        <footer>
-        
-            <div class="row">
-              <div class="mx-auto">
-                <p>CopyRight Infratop.inc</p>
-              </div>
-            </div>
-          
-        </footer>
-        </body>
+    </main>
+    <footer>
+      <p class="mt-3">CopyRight Infratop.inc</p>
+    </footer>
+  </div>
+</body>
 </html>
