--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,62 +1,63 @@
-<div class="container">
+<div class="container pb-5">
   <div class="row pt-5">
-    <div class="col-xl-9 ml-auto">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  
-<h4><span style="background-color:#eeeeee">新規会員登録</span></h4>
-<table>
-  <tr>
-
-  <td><%= f.label :ニックネーム %></td>
-  <td><%= f.text_field :nickname %></td>
-  </tr>
-  <tr>
-   <td><%= f.label :年齢 %></td>
-  <td><%= f.text_field :age %></td>
-  <tr>
-   <td><%= f.label :自己紹介 %></td>
-  <td><%= f.text_field :introduction %></td>
-  </tr>
-  
-  <tr>
-    <td><%= f.label :性別 %></td>
-  <td><%= f.radio_button :sex, User.sexes.key(0) %>
-  <%= f.label :sex, User.sexes_i18n[:man] %>
-  
-  <%= f.radio_button :sex, User.sexes.key(1) %>
-  <%= f.label :sex, User.sexes_i18n[:woman] %></td>
-  </tr>
-  
-  <tr>
-    <td><%= f.label :メールアドレス %></td>
-    <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
-  </tr>
-
-  <tr>
-    <td><%= f.label :パスワード（6文字以上） %>
-    <% if @minimum_password_length %>
-    <% end %></td>
-    <td><%= f.password_field :password, autocomplete: "new-password" %></td>
-  </tr>
-  
-  <tr>
-    <td><%= f.label :パスワード（確認用） %></td>
-    <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
- </tr>
- 
- <tr>
-   <td></td>
-   <td><%= f.submit "新規登録", class: "btn btn-success ml-5" %></td>
- </tr>
- <% end %>
-</table>
- 
-      
-<h4><span style="background-color:#eeeeee">既に登録済みの方</span></h4>
-      <p><%= render "public/shared/links" %>からログインしてください。</p>
-   
- </div>
- </div>
- </div>
-
+    <div class="offset-sm-2 col-sm-9 pb-5">
+      <h4 class="mb-3"><span style="background-color:#eeeeee">新規会員登録</span></h4>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
+          <div class="form-group row">
+            <%= f.label :nickname, 'ニックネーム', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.text_field :nickname, placeholder: "ノリタロー", class: "form-control" %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :age, '年齢', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.text_field :age, placeholder: "20", class: "form-control" %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :introduction, '自己紹介', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.text_field :introduction, placeholder: "空白でも可",class: "form-control" %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :sex, '性別', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.radio_button :sex, User.sexes.key(0) %>
+                  <%= f.label :sex, User.sexes_i18n[:man] %>
+                    <%= f.radio_button :sex, User.sexes.key(1) %>
+                      <%= f.label :sex, User.sexes_i18n[:woman] %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :email, 'メールアドレス', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.text_field :email, placeholder: "sample@example.com",autofocus: true, autocomplete: "email", class: "form-control" %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :password, 'パスワード　（6文字以上）', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.text_field :password, autocomplete: "new-password", class: "form-control" %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :password_confirmation, 'パスワード　（確認用）', class: "col-sm-2 col-form-label" %>
+              <div class="col-sm-10">
+                <%= f.text_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <div class="offset-sm-2 col-sm-10">
+              <%= f.submit '新規登録', class: 'btn btn-success btn-block mt-3 mb-5'%>
+            </div>
+          </div>
+          <% end %>
+            <h4><span style="background-color:#eeeeee">既に登録済みの方</span></h4>
+            <p>
+              <%= render "public/shared/links" %>からログインしてください。</p>
+    </div>
+  </div>
+</div>
