--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -2,8 +2,15 @@
   <div>
   <%= flash[:notice] %>
   </div>
-  <div class="row pt-5">
-    <div class="col-md-6 offset-md-3">
+  <div class="row mt-5">
+    <div class="offset-md-1">
+      <%= link_to institution_path(@review.institution_id) do %>
+      <h2><%= @review.institution.name %></h2>
+      <% end %>
+    </div>
+  </div>  
+  <div class="row mt-2">
+    <div class="col-md-8 offset-md-2">
       <% if @review.user == current_user %>
         <%= link_to 'レビュー削除', institution_review_path(@institution,@review.id), method: :delete, "data-confirm" => "本当に消しますか？", class: 'btn btn-danger px-2' %>
           <% end %>
@@ -113,12 +120,13 @@
                                       </br>
                                       <% end %>
                                         <%= form_with model: [@institution,@review,@comment] do |f| %>
-                                          <%= f.text_area :text, placeholder: "コメントを入力",:size=>"30" %><br> </div>
-                          <div class="col-md-12 offset-md-4">
-                            <%= f.submit "コメント送信", class: "btn btn-success" %>
-                          </div>
-                          <% end %>
-                            </th>
+                                          <%= f.text_area :text, placeholder: "コメントを入力",:size=>"30" %><br>
+                            </div>
+                            <div class="col-md-12 offset-md-4">
+                              <%= f.submit "コメント送信", class: "btn btn-success" %>
+                              <% end %>
+                            </div>
+                        </th>
                       </tr>
             </table>
     </div>
